# uvpp-protocols

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci-tests.yml  release-package.yml
cmake/: Dependencies.cmake  uvpp-protocolsConfig.cmake.in
docs/: README.md  audit-api.md  audit-code-quality.md  http-server.md  index.md  roadmap.md  websocket.md
docs/adr/: 0001-explicit-uvpp-loop-and-visible-ownership.md  0002-module-boundaries-and-dependency-direction.md  0003-transport-composition-with-type-erased-byte-streams.md  0004-private-protocol-engines-and-no-public-backend-selector.md  0005-explicit-http-body-policies.md  0006-websocket-session-ownership-and-explicit-byte-stream-adaptation.md  README.md
docs/archive/: code-quality-audit.md  documentation-rework.md  http-timeout-enforcement.md  route-groups-and-hooks.md  route-path-decoding.md  shared-url-module.md  sse-support.md  static-file-helper.md  tls-listener-adapter.md  tls-support.md
docs/archive/audits/: api-audit.md  milestone-4-audit.md
docs/audits/: api.md  code-quality.md  milestone-4-audit.md  milestone-7-library-audit.md
docs/design/: api-principles.md  dependency-decisions.md  http-server.md  index.md  module-architecture.md  multipart.md  project-scope.md  protocol-composition.md  roadmap.md  sse.md  tls.md  transport-abstractions.md  websocket.md
docs/proposals/: README.md  byte-stream-lifetime-controls.md  composable-stream-connectors.md  database-adapters.md  dns-resolution.md  documentation-rework.md  fluent-temporary-route-builders.md  http-client-flow-control-and-deadlines.md  http-client.md  http-metrics.md  http-redirect-policy-extensions.md  http-timeout-enforcement.md  http-tls-listener-integration.md  http2-support.md  http3-quic-support.md  member-naming-normalization.md  mqtt-client.md  multipart-handling.md  outbound-connector-and-proxy-routes.md  protocol-module-portfolio.md  redis-support.md  route-body-limit-inheritance.md  route-groups-and-hooks.md  route-level-hooks.md  route-options-body-mode.md  route-options-parameter-constraints.md  route-path-decoding.md  routing-and-middleware-polish.md  shared-protocol-foundation.md  shared-url-module.md  smtp-support.md  sse-automatic-heartbeats.md  sse-support.md  static-file-helper.md  stream-body-error-ownership.md  tls-graceful-shutdown.md  tls-listener-adapter.md  tls-policy-and-identity.md  tls-support.md  typed-json-body-policy.md  (+1 more)
docs/user/: dns.md  http-client.md  http-server.md  index.md  io.md  tls.md  url.md  websocket.md
examples/: admin_endpoints.cpp  http_server.cpp  local_json_api.cpp  log_streaming.cpp  websocket_echo.cpp
include/uvpp/protocols/: dns.hpp  http.hpp  io.hpp  json.hpp  result.hpp  tls.hpp  url.hpp  websocket.hpp
include/uvpp/protocols/http/: client.hpp  connection.hpp  error.hpp  headers.hpp  method.hpp  multipart.hpp  multipart_options.hpp  request.hpp  response.hpp  route_params.hpp  route_path_matching.hpp  router.hpp  server.hpp  server_options.hpp  static_files.hpp  status.hpp  upgrade.hpp
include/uvpp/protocols/http/detail/: multipart_parser.hpp  route_path.hpp
include/uvpp/protocols/io/: byte_stream.hpp  endpoint.hpp  error.hpp  pipe_listener.hpp  stream_listener.hpp  tcp_connector.hpp  tcp_listener.hpp
include/uvpp/protocols/tls/: context.hpp  error.hpp  listener.hpp  stream.hpp
include/uvpp/protocols/websocket/: session.hpp
src/: dns.cpp  url.cpp
src/http/: client.cpp  error.cpp  headers.cpp  method.cpp  multipart.cpp  request.cpp  response.cpp  route_params.cpp  route_path.cpp  router.cpp  server.cpp  server_options.cpp  static_files.cpp  status.cpp  upgrade.cpp
src/http/detail/: http1_state_machine.cpp  http1_state_machine.hpp  http2_state_machine.cpp  http2_state_machine.hpp  route_matching.hpp  url_encoding.hpp
src/io/: transport.cpp
src/tls/: context.cpp  context_internal.hpp  error.cpp  listener.cpp  stream.cpp
src/websocket/: session.cpp
src/websocket/detail/: handshake.cpp  handshake.hpp
tests/: dns_test.cpp  http1_parser_test.cpp  http_client_test.cpp  http_request_test.cpp  http_response_test.cpp  http_router_test.cpp  http_server_integration_test.cpp  io_test.cpp  multipart_test.cpp  structure_test.cpp  test.hpp  test_main.cpp  tls_stream_test.cpp  url_test.cpp  websocket_test.cpp
